# coder

./: .golangci.yaml  Makefile  go.mod  go.sum
.github/workflows/: ci.yaml  release.yaml
.idx/: dev.nix
cli/: intel.go  root.go  server.go
cmd/coder-intel-invoke/: main.go  main_test.go
cmd/coder-intel-invoke-rs/: Cargo.toml  build.rs  build.sh
cmd/coder-intel-invoke-rs/src/: main.rs
coderd/: apikey.go  coderd.go  intel.go  intel_test.go
coderd/apidoc/: docs.go  swagger.json
coderd/audit/: request.go
coderd/coderdtest/: coderdtest.go
coderd/database/: db_test.go  dump.sql  foreign_key_constraint.go  models.go  querier.go  querier_test.go  queries.sql.go  sqlc.yaml  types.go  unique_constraint.go
coderd/httpmw/: intelparam.go  intelparam_test.go
coderd/inteldserver/: inteldserver.go  inteldserver_test.go
coderd/notifications/: manager.go  manager_test.go  noop.go  notifications.go  notifications_test.go  notifier.go  payload.go  provider.go  pubsub.go  singleton.go  spec.go
coderd/provisionerdserver/: provisionerdserver.go
codersdk/: deployment.go  intel.go  organizations.go
docs/: cli.md  manifest.json
docs/admin/: tiered-rbac.md
docs/api/: enterprise.md  general.md  insights.md  intel.md  schemas.md
docs/cli/: intel.md  intel_start.md  inteld.md  inteld_start.md
docs/install/: kubernetes.md
dogfood/: Dockerfile
inteld/: inteld.go  inteld_internal_test.go  inteld_test.go
site/: package.json  pnpm-lock.yaml  test.polyfills.js  test.setup.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  viteimports.js
site/e2e/: api.ts  (+3 more)
(+224 files in other folders)
