[package]
name = "coder-intel-invoke-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
prost = "0.12.6"
prost-types = "0.12.6"
which = "6.0.1"

[build-dependencies]
prost-build = "0.11"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Single codegen unit to improve LTO
panic = "abort"   # Reduce the overhead by aborting on panic
strip = true      # Strip symbols
